# requirements-builder

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements.devel.txt  requirements.latest.txt  requirements.lowest.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst
requirements_builder/: __init__.py  cli.py  requirements_builder.py  version.py
tests/: test_cli.py  test_requirements-builder.py  test_requirements_builder.py
tests/data/: other_req.txt  req.txt  setup.py  setup_if_main.py
tests/data/testpkh/: __init__.py
tests/fixtures/: poetry.toml  pyproject.toml  requirements.devel.txt  setup_py_placeholder.txt
