# This file is part of Requirements-Builder
# Copyright (C) 2015, 2017, 2020, 2021 CERN.
#
# Requirements-Builder is free software; you can redistribute it and/or
# modify it under the terms of the Revised BSD License; see LICENSE
# file for more details.

[metadata]
name = requirements-builder
version = attr:requirements_builder.__version__
url = https://github.com/inveniosoftware/requirements-builder/
author = Invenio Collaboration
author_email = info@inveniosoftware.org
description = Build requirements files from setup.py requirements.
long_description = file: README.rst
license = BSD
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click >= 7.0
    mock <4,>= 1.3.0
setup_requires =
    pytest-runner >= 2.6.2
    importlib-metadata >= 1.6.0
    mock >= 1.3.0
tests_require =
    pytest-cache >= 1.0
    pytest-invenio >= 1.4.0
    selenium <4 #; python_version==3.6

[options.packages.find]
include = requirements_builder

[options.entry_points]
console_scripts =
    requirements-builder = requirements_builder.cli:cli

[options.extras_require]
docs =
    Sphinx >= 3
all =
    Sphinx >= 3
    pytest-invenio >= 1.4.0
    pytest-cache >= 1.0

[aliases]
test = pytest

[wheel]
universal = 1

[yapf]
coalesce_brackets = 1
join_multiple_lines = 0
indent_dictionary_value = 1
dedent_closing_brackets = 1
space_between_ending_comma_and_closing_bracket = 1

split_penalty_after_opening_bracket = 0
split_penalty_for_added_line_split = 0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
