[build-system]
requires = [
    "setuptools>=61.2",
    "pytest-runner >= 2.6.2",
    "importlib-metadata >= 1.6.0",
    "mock >= 1.3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-builder"
version = "0.4.4dev"
authors = [{name = "Invenio Collaboration", email = "info@inveniosoftware.org"}]
description = "Build requirements files from setup.py requirements."
readme = "README.rst"
license = {text = "BSD"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "click >= 7.0",
    "mock <4,>= 1.3.0",
    "tomli >= 2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/inveniosoftware/requirements-builder/"

[project.optional-dependencies]
docs = ["Sphinx >= 3"]
all = [
    "Sphinx >= 3",
    "pytest-invenio >= 1.4.0",
    "pytest-cache >= 1.0",
]
testing = [
    "pytest-cache >= 1.0",
    "pytest-invenio >= 1.4.0",
]

[project.scripts]
requirements-builder = "requirements_builder.cli:cli"
